[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "libop"
description = "original programmer"
version = "32"
authors = [
    {name = "Bart Thate",email = "bthate@dds.nl"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]

[project.urls]
"home" = "https://pypi.org/project/libop"
"bugs" = "https://github.com/xobjectz/libop/issues"
"source" = "https://github.com/xobjectz/libop"


[tool.setuptools]
script-files = [
    'bin/op',
]
packages = [
    "op",
    "op.modules"
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/libop" = [
    "README.rst"
]
